--- a/.editorconfig
+++ b/.editorconfig
@@ -9,3 +9,4 @@ indent_size = 2
 trim_trailing_whitespace = true
 end_of_line = lf
 insert_final_newline = true
+ij_java_use_single_class_imports = true
